fixed button styling on mobile

--- a/css/Sass/main.scss
+++ b/css/Sass/main.scss
@@ -333,10 +333,18 @@ footer {
 	}
 
 	.input-group {
-		//position: relative;
 		width: 90%;
 		@media screen and (max-width: 768px) {
 			width: 100%;
+		}
+	}
+
+	.input-group .form-control {
+		@media screen and (max-width: 600px) {
+			width: 120%;
+		}
+		@media screen and (max-width: 400px) {
+			width: 135%;
 		}
 	}
 
@@ -376,6 +384,7 @@ footer {
 			box-shadow: none;
 			transition: $transition;
 		}
+
 		@media screen and (max-width: 480px) {
 			margin-left: 0;
 		}
